--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,3 +24,39 @@ h1, h2 {
     float: left;
     font-size: 280%;
 }
+
+
+#menu, #logo {
+    line-height: 75px;
+}
+
+/* navigation links */
+
+#menu {
+    font-size: 110%;
+    letter-spacing: 4px;
+
+}
+
+#menu li {
+    float: right;
+    list-style-type: none;
+    margin-right: 30px;
+    direction: rtl;
+}
+
+/*styles the links home/signup/gallery 
+color inherit means they inherit color of the closest parent */
+
+#menu a {
+    text-decoration:none;
+    color:inherit
+}
+
+#menu a:hover {
+   border-bottom: 1.25px solid; color: #3a3a3a;
+    
+}
+.border {
+    border-bottom: 1px solid #3a3a3a;
+}
