--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,3 +199,19 @@ hr {
     width: 100%;
     overflow: hidden;
 }
+/* picture behind meetup times with white bordeer */
+#times div {
+    color: #fafafa;
+    background-color: rgba(0, 0, 0, .6);
+    width: 20%;
+    height: 300px;
+    float: left;
+    padding: 30px 0 0 10px;
+    text-align: center;
+    border: solid 2px #fafafa;
+    box-sizing: border-box;
+}
+
+#times h2 {
+    color: #fafafa;
+}
