--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -244,3 +244,36 @@ hr {
     width: 100%;
    
 }
+
+/* media queries */
+
+/* for medium & larger screen from 1200px wide & below */
+@media screen and (max-width: 1200px) {
+    #club-ethos {
+        width: 65%;
+        height: 1200px;
+        margin: 0 auto;
+    }
+
+    #welcome {
+        padding: 30px 0;
+        margin: 0;
+    }
+
+    #left-about, #right-about {
+        width: 100%;
+        float: left;
+        padding: 0;
+    }
+
+    #center-about {
+        clear: both;
+        width: 100%;
+        float: left;
+        padding: 0;
+    }
+
+    hr {
+        display: none;
+    }
+}
