--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -277,3 +277,12 @@ hr {
         display: none;
     }
 }
+
+/* for medium screen sizes from 950px wide & below */
+@media screen and max (max-width: 950px) {
+    clear: left; 
+    float: left;
+    margin-left: 30px;
+    margin-bottom: 20px;
+    line-height: 25px;    
+} 
